# flogging

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASELOG.md  bacon.toml  bld-mdbook.sh  licenseheader.txt  llvm-pretty.sh  logger.dtd  mv_llvm_cov.sh  start-tasks.sh  update.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  feature_request.md
docs/: 404.html  index.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
docs/api/: search-index.js  src-files.js
docs/api/flogging/: all.html  attr.logger.html  enum.ConsoleType.html  enum.FormatType.html  enum.Formatter.html  enum.Handler.html  enum.Level.html  index.html  macro.config.html  macro.const_logger.html  macro.entering.html  macro.exiting!.html  macro.exiting.html  macro.fine!.html  macro.finer.html  macro.finest.html  macro.get_handler!.html  macro.get_handler.html  macro.is_logging!.html  macro.is_logging.html  macro.set_level.html  macro.severe.html  sidebar-items.js  struct.ConsoleHandler.html  struct.ConsoleTypeError.html  struct.ConsoleTypeIter.html  struct.FileHandler.html  struct.Iso8601Formatter.html  struct.LogEntry.html  struct.Logger.html  struct.LoggerBuilder.html  struct.MockFormatter.html  struct.MockHandler.html  struct.SimpleFormatter.html  struct.StringHandler.html  struct.UnixTimestampFormatter.html  trait.FormatTrait.html  trait.HandlerTrait.html
docs/api/flogging_macros/: index.html  macro.entering.html  macro.finer!.html  macro.finer.html  macro.finest!.html  macro.info.html  macro.is_logging.html  macro.set_level.html  macro.severe.html  sidebar-items.js
docs/api/search.desc/flogging/: flogging-desc-0-.js
docs/api/search.desc/flogging_macros/: flogging_macros-desc-0-.js
docs/api/src/flogging/: lib.rs.html  macros.rs.html
docs/api/src/flogging_macros/: format.rs.html  lib.rs.html  logger.rs.html
docs/api/trait.impl/strum/: trait.IntoEnumIterator.js
docs/coverage/: index.html
docs/coverage/flogging/src/: macros.rs.html
docs/coverage/flogging_macros/src/: format.rs.html  lib.rs.html  logger.rs.html
docs/coverage/src/: macros.rs.html
docs/coverage/src/handlers/: console_handler.rs.html  file_handler.rs.html  handler.rs.html  mock_handler.rs.html  string_handler.rs.html
docs/coverage/src/logger/: builder.rs.html  level.rs.html  log_entry.rs.html  mod.rs.html  tests.rs.html
docs/extras/: CHANGELOG.html  RELEASELOG.html
docs/guide/: custom_formatters.html  custom_handlers.html  hybrid.html  integration.html  macros.html  methods.html  overview.html
docs/guide/formatters/: final_code.html  step_1.html  step_2.html  step_3.html  step_4.html  wrap_up.html
docs/guide/handlers/: final_code.html  step_1.html  step_2.html  step_3.html  step_4.html  step_5.html  wrap_up.html
docs/guide/macros/: explain_1.html  explain_2.html  idea.html  wrap_up.html
docs/guide/methods/: explain_1.html  explain_2.html  explain_3.html  wrap_up.html
docs/theme/: pagetoc.css
flogging_macros/: Cargo.toml  README.md
flogging_macros/src/: format.rs  lib.rs  logger.rs  show_streams.rs
guide/: .gitignore  book.toml
guide/src/: SUMMARY.md  introduction.md
guide/src/api/: crates.js  help.html  settings.html
guide/src/api/flogging/: enum.FormatType.html  index.html  macro.const_logger!.html  (+11 more)
guide/src/coverage/: index.html
guide/src/extras/: RELEASELOG.md
guide/src/guide/: custom_formatters.md  custom_handlers.md  hybrid.md  integration.md  macros.md  methods.md  overview.md
llvm-cov/html/: index.html
src/: level.rs  lib.rs  log.rs  log_entry.rs  logger.rs  macros.rs  main.rs
src/handlers/: console_handler.rs  file_handler.rs  formatter.rs  handler.rs  mock_handler.rs  mod.rs  string_handler.rs
src/handlers/console_handler/: console_type.rs
src/handlers/formatter/: format_trait.rs  format_type.rs  formatter.rs  iso8601_formatter.rs  mock_formatter.rs  mod.rs  simple_formatter.rs  unixtimestamp_formatter.rs
src/handlers/formatters/: format_trait.rs  format_type.rs  formatter.rs  iso8601_formatter.rs  mock_formatter.rs  mod.rs  simple_formatter.rs  unixtimestamp_formatter.rs
src/handlers/handler/: handler_trait.rs
src/log/: utils.rs
src/logger/: builder.rs  level.rs  log_entry.rs  log_manager.rs  mod.rs  tests.rs  utils.rs
tests/: custom_formatter.rs  custom_handler.rs  it_conversion.rs  it_customs.rs  it_log_messages.rs
(+209 files in other folders)
