workspace = { members = ["flogging_macros"]}

[package]
name = "flogging"
version = "0.4.0"
edition = "2024"
description = "Just another [...] logger. This one loosely based on the Java logging package: java.util.logging."
license = "GPL-3.0-or-later"
resolver = "2"


[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["std","alloc"] }
flogging_macros = {path = "flogging_macros"}
regex = "1.11.1"
dyn-fmt = "0.4.3"
strfmt = "0.2.5"
dyn-clone = "1.0.19"
