[workspace]
members = ["flogging_macros"]

[package]
name = "flogging"
version = "0.6.0"
description = "This is a fast, flexible logging crate, loosely based on the Java logging package: java.util.logging."
authors = ["Bradley Willcott <bw.opensource@yahoo.com>"]
edition = "2024"
rust-version = "1.85.1"
license = "GPL-3.0-or-later"
resolver = "2"
documentation = "https://docs.rs/flogging"
repository = "https://github.com/bewillcott/flogging"
keywords = ["log", "logger", "logging", "tracing", "debug"]
categories = ["development-tools::debugging"]
exclude = ["/.vscode", "logger.dtd", "/src/main.rs", "licenseheader.txt"]
publish = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["std", "alloc"] }
flogging_macros = { version = "=0.6.0", path = "flogging_macros" }
regex = "1.11.1"
dyn-fmt = "0.4.3"
strfmt = "0.2.5"
dyn-clone = "1.0.20"
strum = { version = "0.27.2", features = ["std", "derive", "strum_macros"] }
