[package]
name = "flogging_macros"
version = "0.2.0"
edition = "2024"
description = "Macro support package for the 'flogging' crate."
license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.104", features = ["full", "visit", "extra-traits"]}
quote = "1.0"
regex = "1.11.1"
proc-macro2 = "1.0.95"
darling = "0.21.0"
proc-macro-error = { version = "1", default-features = false }
dyn-fmt = "0.4.3"
