[package]
name = "flogging_macros"
version = "0.4.1"
description = "Macro support package for the 'flogging' crate."
license = "GPL-3.0-or-later"
authors = ["Bradley Willcott <bw.opensource@yahoo.com>"]
edition = "2024"
rust-version = "1.85.1"
repository = "https://github.com/bewillcott/flogging"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.104", features = ["full", "visit", "extra-traits"]}
quote = "1.0"
regex = "1.11.1"
proc-macro2 = "1.0.95"
darling = "0.21.0"
proc-macro-error = { version = "1", default-features = false }
dyn-fmt = "0.4.3"

[dev-dependencies]
trybuild = "1.0.106"
